Install vim dracula theme

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -21,6 +21,17 @@
     src: zshrc
     dest: ~/.zshrc
 
+- name: Create ~/.vim/colors directory
+  file:
+    path: ~/.vim/colors
+    state: directory
+    recurse: true
+
+- name: Download dracula theme
+  get_url:
+    url: https://raw.githubusercontent.com/dracula/vim/master/colors/dracula.vim
+    dest: ~/.vim/colors/dracula.vim
+
 - name: Configure vim
   copy:
     src: vimrc
