--- a/roles/chef-dk/tasks/main.yml
+++ b/roles/chef-dk/tasks/main.yml
@@ -8,4 +8,4 @@
 
 - name: Install Vbox
   apt:
-    deb: https://download.virtualbox.org/virtualbox/5.2.6/virtualbox-5.2_5.2.6-120293~Ubuntu~xenial_amd64.deb
+    name: virtualbox
