--- a/roles/base/files/tmux.conf
+++ b/roles/base/files/tmux.conf
@@ -1,1 +1,13 @@
 set -g default-terminal "xterm-256color"
+set -g status-bg black
+set -g status-fg white
+set -g window-status-current-bg white
+set -g window-status-current-fg black
+set -g window-status-current-attr bold
+set -g status-interval 60
+set -g status-left-length 30
+set -g status-left '#[fg=green](#S) #(whoami)'
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%h:%m#[default]'
+set -g mouse on
+set -g pane-border-fg black
+set -g pane-active-border-fg brightred
