Install network-manager-openvpn-gnome

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -27,6 +27,7 @@
   - network-manager-l2tp
   - network-manager-l2tp-gnome
   - network-manager-openvpn
+  - network-manager-openvpn-gnome
 
 - name: Change default shell
   user:
