Add quake2 baseq2 files

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -30,6 +30,7 @@
   - network-manager-openvpn-gnome
   - gnome-control-center
   - gnome-online-accounts
+  - quake2
 
 - name: Change default shell
   user:
