Install libtool, autoconf, autogen

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -31,6 +31,9 @@
   - gnome-control-center
   - gnome-online-accounts
   - quake2
+  - autoconf
+  - autogen
+  - libtool
 
 - name: Change default shell
   user:
