--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -34,6 +34,7 @@
   - autoconf
   - autogen
   - libtool
+  - ipcalc
 
 - name: Change default shell
   user:
@@ -65,3 +66,11 @@
   copy:
     src: tmux.conf
     dest: ~/.tmux.conf
+
+- name: Add repo for Gdrive
+  apt_repository:
+    repo: 'ppa:alessandro-strada/ppa'
+
+- name: Install google-drive-ocamlfuse
+  apt:
+    name: google-drive-ocamlfuse
