FUCK YOU NVIDIA

--- a/roles/ezquake/files/ton.cfg
+++ b/roles/ezquake/files/ton.cfg
@@ -1,5 +1,9 @@
 unbindall
 
+// FUCK YOU NVIDIA :pointdown:
+// NVIDIA driver is not able to handle hardware gamma selection, thus it's not possible to override gamma from the game
+// Quick FIX before launching ezQuake:
+// xrandr --output $(xrandr | awk '{ if ($2 == "connected") { print $1; } }') --gamma 1.5:1.5:1.5
 //Config Management
 cfg_backup                  "0"
 cfg_legacy_exec             "0"
