Add gl_textureless 1 for ezquake

--- a/roles/ezquake/files/ton.cfg
+++ b/roles/ezquake/files/ton.cfg
@@ -732,6 +732,7 @@ gl_scaleTurbTextures "0"
 gl_subdivide_size "128"
 gl_texturemode2d "gl_nearest"
 gl_texturemode "gl_nearest_mipmap_linear"
+gl_textureless "1"
 gl_picmip "0"
 gl_flashblend "1"
 gl_ztrick "0"
