Install shodan cli

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -41,6 +41,10 @@
   - python-netaddr
   - nghttp2-client
 
+- name: Install shodan cli
+  pip:
+    name: shodan
+
 - name: Change default shell
   user:
     name: donatas
