--- a/roles/quake2/files/baseq2/ton.cfg
+++ b/roles/quake2/files/baseq2/ton.cfg
@@ -41,7 +41,7 @@ set msg 1
 bind MOUSE1 +attack
 alias normmous "set m_pitch 0.022;set m_yaw 0.022"
 normmous
-set sensitivity 4
+set sensitivity 3
 set m_roll 0
 set m_filter 1
 set freelook 1
@@ -56,7 +56,7 @@ bind MOUSE2 +forward
 //bind KP_LEFTARROW +left
 //bind KP_RIGHTARROW +right
 bind SHIFT +back
-bind space +moveup
+bind space +dj
 bind c +movedown
 
 //Inventor 
@@ -107,16 +107,14 @@ alias +Rjp "+attack;+moveup"
 alias -Rjp "-attack;w;-moveup"
 bind q +Rjp
 
+//Double Jump
+alias +dj "+moveup; wait; wait; -moveup; wait; wait; +moveup"
+alias -dj "-moveup"
+
 //Messages
 bind t messagemode
 bind y messagemode2
 bind F1 "say =]"
-
-//WALK
-alias run "cl_run 1;alias run-walk walk;echo Running"
-alias walk "cl_run 0;alias run-walk run;echo Walking"
-alias run-walk walk
-bind ALT run-walk
 
 //Zoom fov 90
 alias z90_on "fov 90;m_pitch 0.018;m_yaw 0.018;alias z90 z90_off;alias zoom_60 zoom_off"
