Add servers alias for quake2

--- a/roles/quake2/files/baseq2/ton.cfg
+++ b/roles/quake2/files/baseq2/ton.cfg
@@ -246,6 +246,10 @@ alias timer20 "stopsound;play armor20;echo -=[ 20s ]=-"
 alias dl20 "bind * timer20"
 dl20
 
+alias srv1 "echo .german q2; connect 195.93.242.155:27911"
+alias srv2 "echo gameservices.eu (NL); connect 31.214.157.33:27910"
+alias srv3 "echo gameservices.eu (SE); connect 109.230.199.109:27910"
+
 clear
 
 exec Prt_video.cfg
