Set default shell to zsh

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -88,3 +88,8 @@
   copy:
     src: tmux.conf
     dest: ~/.tmux.conf
+    
+- name: Set default sheel to /bin/zsh
+  user:
+    name: donatas
+    shell: /bin/zsh
