--- a/roles/chef-dk/tasks/main.yml
+++ b/roles/chef-dk/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Download ChefDK
   apt:
-    deb: https://packages.chef.io/files/stable/chefdk/2.4.17/ubuntu/16.04/chefdk_2.4.17-1_amd64.deb
+    deb: https://packages.chef.io/files/stable/chefdk/4.7.73/ubuntu/18.04/chefdk_4.7.73-1_amd64.deb
 
 - name: Install Vagrant
   apt:
@@ -8,4 +8,4 @@
 
 - name: Install Vbox
   apt:
-    name: https://download.virtualbox.org/virtualbox/5.2.6/virtualbox-5.2_5.2.6-120293~Ubuntu~xenial_amd64.deb
+    name: https://download.virtualbox.org/virtualbox/6.1.4/virtualbox-6.1_6.1.4-136177~Ubuntu~bionic_amd64.deb
