--- a/roles/chef-dk/tasks/main.yml
+++ b/roles/chef-dk/tasks/main.yml
@@ -4,4 +4,4 @@
 
 - name: Install Vagrant
   apt:
-    deb: https://releases.hashicorp.com/vagrant/2.0.2/vagrant_2.0.2_x86_64.deb?_ga=2.247445252.1078146561.1517955298-1159370436.1517955298
+    deb: https://releases.hashicorp.com/vagrant/2.2.7/vagrant_2.2.7_x86_64.deb
