--- a/roles/base/files/i3/config
+++ b/roles/base/files/i3/config
@@ -13,7 +13,6 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-#font pango:monospace 8
 font pango:Iosevka Aile 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
@@ -192,6 +191,9 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+
+# Lock
+bindsym $mod+Delete exec "i3lock -c 000000"
 
 # Startup stuff
 assign [class="Tilix"] $ws1
