--- a/roles/base/files/i3/config
+++ b/roles/base/files/i3/config
@@ -52,6 +52,10 @@ exec --no-startup-id /usr/bin/feh --bg-fill ~/.config/i3/img/bg.jpg
 exec --no-startup-id /usr/bin/xcompmgr -c -f -n
 # CPU powersave
 exec --no-startup-id cpupower frequency-set --governor powersave
+# Screenshots
+bindsym Print exec --no-startup-id maim ~/Pictures/Screenshot-"$(date +%Y-%m-%d-%H:%M:%S)"
+bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) ~/Pictures/Screenshot-"$(date +%Y-%m-%d-%H:%M:%S)"
+bindsym Shift+Print exec --no-startup-id maim --select ~/Pictures/Screenshot-"$(date +%Y-%m-%d-%H:%M:%S)"
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
