--- a/roles/base/files/i3/config
+++ b/roles/base/files/i3/config
@@ -53,9 +53,9 @@ exec --no-startup-id /usr/bin/xcompmgr -c -f -n
 # CPU powersave
 exec --no-startup-id cpupower frequency-set --governor powersave
 # Screenshots
-bindsym Print exec --no-startup-id maim ~/Pictures/Screenshot-"$(date +%Y-%m-%d-%H:%M:%S)"
-bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) ~/Pictures/Screenshot-"$(date +%Y-%m-%d-%H:%M:%S)"
-bindsym Shift+Print exec --no-startup-id maim --select ~/Pictures/Screenshot-"$(date +%Y-%m-%d-%H:%M:%S)"
+bindsym Print exec --no-startup-id maim ~/Pictures/Screenshot-"$(date +%Y-%m-%d-%H:%M:%S)".png
+bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) ~/Pictures/Screenshot-"$(date +%Y-%m-%d-%H:%M:%S)".png
+bindsym Shift+Print exec --no-startup-id maim --select ~/Pictures/Screenshot-"$(date +%Y-%m-%d-%H:%M:%S)".png
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
