--- a/roles/base/files/i3/config
+++ b/roles/base/files/i3/config
@@ -206,6 +206,6 @@ assign [class="Firefox"] $ws2
 assign [class="Slack"] $ws3
 assign [class="discord"] $ws3
 assign [class="Code"] $ws4
-assign [class="nvim-qt"] $ws4
+assign [class="gvim"] $ws4
 assign [class="csgo_linux64"] $ws6
-exec --no-startup-id i3-msg "exec tilix; exec firefox; exec slack; exec discord; exec nvim-qt;"
+exec --no-startup-id i3-msg "exec tilix; exec firefox; exec slack; exec discord; exec gvim;"
