Configure basic irssi autojoins, chatnets
Signed-off-by: Donatas Abraitis <donatas@opensourcerouting.org>

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -131,3 +131,8 @@
   copy:
     src: settings.json
     dest: ~/.config/Code/User/settings.json
+
+- name: Copy .irssi/config
+  copy:
+    src: irssi/config
+    dest: ~/.irssi/config
