--- a/roles/base/files/i3/config
+++ b/roles/base/files/i3/config
@@ -58,7 +58,7 @@ bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow)
 bindsym Shift+Print exec --no-startup-id maim --select ~/Pictures/Screenshot-"$(date +%Y-%m-%d-%H:%M:%S)".png
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec tilix
 
 # kill focused window
 bindsym $mod+Shift+q kill
