Disable any existing language switcher before setting a new one
Signed-off-by: Donatas Abraitis <donatas@opensourcerouting.org>

--- a/roles/base/files/i3/config
+++ b/roles/base/files/i3/config
@@ -28,6 +28,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # Languages
 exec --no-startup-id setxkbmap -layout us,lt
+exec --no-startup-id setxkbmap -option ''
 exec --no-startup-id setxkbmap -option 'grp:alt_space_toggle'
 
 # Autolock after 5 minutes of incactivity
